# Wegent

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .log1764924372426  .log1764924372989  .pre-commit-config.yaml  .wecodeGitCommitPrompt  .wegentrc.example  AGENTS.md  AGENT_ASSISTANT.md  CONTRIBUTING.md  FRONTEND_IMPLEMENTATION_GUIDE.md  GRACEFUL_SHUTDOWN_ANALYSIS.md  GRACEFUL_SHUTDOWN_DOCUMENTATION_SUMMARY.txt  GRACEFUL_SHUTDOWN_INDEX.md  PORT_AUTO_ADJUSTMENT.md  README.md  README_zh.md  SECURITY.md  TESTING.md  UPSTREAM_SYNC.md  build_image.sh  build_image_mac.sh  current-page  design-qa.md  device.py  docker-compose.build.yml  docker-compose.e2e.yml  docker-compose.standalone.yml  docker-compose.yml  gemini_deepresearch_plan.md  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings-page  sleep_10900.py  start.sh  stop_port.sh  (+4 more)
backend/: .coveragerc  .env.example  GRACEFUL_SHUTDOWN_README.md  GRACEFUL_SHUTDOWN_SUMMARY_CN.md  MIGRATION_GIT_TOKEN_ENCRYPTION.md  README.md  START_SCRIPT_USAGE.md  WIKI_FEATURE.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  init.sql  kind.md  migrate_encrypt_tokens.py  namelist.txt  pm-battle-ghost-prompt.md  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_emoji_docx.py  update.sql  wiki_tables.sql
backend/alembic/: README  env.py
backend/app/: __init__.py  main.py
backend/dingtalk/: __init__.py  config.py  user_mapper.py
backend/init_data/: 01-default-resources.yaml  01-public-shells.yaml  02-public-resources.yaml  02-public-shells.yaml  03-public-skills.yaml  03-public-tools.yaml  03-templates.yaml  README.md  default_user.yaml
backend/migrations/: add_last_interaction_at.sql  rollback_last_interaction_at.sql
backend/scripts/: batch_import_eval_permissions.py  fix_custom_shell_support_model.py  fix_kb_retriever_and_reindex.py  generate_wegent_help_knowledge_seed.py  local_cloud_device_offline_monitor.py  update_skill_binary.py  verify_indexes.py
backend/tests/: conftest.py  test_context_decorators.py  test_dependency_constraints.py  test_knowledge_permission_service.py  test_main_system_initialization_state.py  test_mcp_comparison.py  test_multiworker_issues.py  test_request_logging.py  test_ws_decorators.py
backend/wecode/: OPEN_SOURCE_TODO.md  __init__.py  exceptions.py  init_data.sql
executor/: BUILD.md  Cargo.toml  LOCAL_DEV.md  __version__.py  app.py  build.sh  executor.spec  local.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_agno_integration.py  version.py
executor/agents/: __init__.py  api_headers.py  base.py  env_value.py  factory.py
executor/callback/: __init__.py  callback_client.py  callback_handler.py  startup_reporter.py  streaming_handler.py
executor/code_server/: __init__.py  consts.py  contexts.py  main.py  messaging.py  requirements.txt
executor/config/: config.py  config_loader.py  device_config.py  env_reader.py  local_cli_config.py
executor/docs/: LOCAL_DEVICE_PYTHON_MIGRATION_TESTS.md  LOCAL_MODE.md
executor/envd/: README.md  filesystem_service.py  generate.sh  process_service.py  server.py  test_server.py
executor/examples/: pre-execute-hook.sh
executor/hooks/: __init__.py  pre_execute_hook.py  rthook_version.py
executor/modes/: __init__.py
executor/platform/: __init__.py
executor/platform_compat/: __init__.py  base.py  cmdline.py  resource_limits.py
executor/routers/: __init__.py  code_tool.py
executor/runtime_work/: __init__.py  agent_adapter.py  codex_discovery.py  codex_global_state.py  fork_transfer.py  local_task_store.py  rpc_handler.py
executor/scripts/: build_local.py  dev_sidecar.py  install.sh  local_executor_install.ps1  local_executor_install.sh  test_local_executor.py  wegent-executor.sh  wegent-executor.spec
executor/services/: __init__.py  agent_service.py  api_client.py  attachment_downloader.py  attachment_prompt_processor.py  ci_repair_service.py  duckdb_query.py  heartbeat_service.py  image_preprocessor.py  pid_manager.py  runtime_stream_cache.py  task_identity.py  turn_file_changes.py  workspace_archive_restore.py  workspace_service.py
executor/src/: browser_mcp.rs  claude_session.rs  codex_phase.rs  connector_gateway.rs  connector_mcp.rs  heartbeat.rs  image_preprocessor.rs  lib.rs  logging.rs  mcp_utils.rs  process_environment.rs  prompt_enrichment.rs  version.rs
executor/tasks/: __init__.py  cancel_handler.py  reader.py  resource_manager.py  status_sync.py  task_processor.py  task_state_manager.py
executor/tests/: agent_command_contract.rs  agent_process_engine_contract.rs  agent_runtime_capabilities_contract.rs  agno_config_contract.rs  app_runtime_work_contract.rs  app_runtime_work_file_changes_contract.rs  app_runtime_work_fork_rpc_contract.rs  app_runtime_work_native_update_contract.rs  app_runtime_work_send_contract.rs  app_runtime_work_workspace_contract.rs  app_startup_contract.rs  attachment_handler_contract.rs  attachment_prompt_processor_contract.rs  binary_replacer_contract.rs  build_entrypoint_contract.rs  callback_contract.rs  claude_cancellation_contract.rs  claude_options_contract.rs  claude_stream_event_contract.rs  cli_contract.rs  codex_app_server_contract.rs  codex_attachment_input_contract.rs  codex_cancellation_contract.rs  config_contract.rs  config_update_contract.rs  conftest.py  dify_agent_contract.rs  docker_image_contract.rs  docker_runtime_contract.rs  emitter_contract.rs  envd_archive_contract.rs  (+55 more)
executor_manager/: README.md  README_zh.md  START_SCRIPT_USAGE.md  git_cache_cleanup.py  main.py  pyproject.toml  pytest.ini  requirements.txt  start.sh
knowledge_doc_converter/: .env.example  README.md  pyproject.toml  start.sh
knowledge_engine/: pyproject.toml
knowledge_runtime/: .env.example  pyproject.toml  start.sh
shared/: .coveragerc  __init__.py  logger.py  pyproject.toml  pytest.ini  status.py  telemetry.py  telemetry_context.py  telemetry_instrumentation.py  telemetry_metrics.py
wegent-cli/: README.md  docker-compose.test.yml  install-cli.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
(+7082 files in other folders)
