[package]
name = "wegent-executor"
version = "1.8.5"
edition = "2021"
rust-version = "1.77"
description = "Wegent task executor service"
license = "Apache-2.0"

[lib]
doctest = false

[[bin]]
name = "wegent-executor"
path = "src/bin/wegent-executor.rs"

[[bin]]
name = "wegent-executor-dev"
path = "src/bin/wegent-executor-dev.rs"
required-features = ["dev-reload"]

[features]
default = []
dev-reload = ["dep:ctrlc", "dep:notify"]

[dependencies]
axum = "0.8"
ctrlc = { version = "3.4", features = ["termination"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
flate2 = "1.0"
notify = { version = "6.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tf-rust-socketio = { version = "0.8.1", features = ["async"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
