[package]
name = "wegent-executor"
version = "1.8.5"
edition = "2021"
rust-version = "1.77"
description = "Wegent task executor service"
license = "Apache-2.0"

[lib]
doctest = false

[[bin]]
name = "wegent-executor"
path = "src/bin/wegent-executor.rs"

[[bin]]
name = "wegent-executor-dev"
path = "src/bin/wegent-executor-dev.rs"
required-features = ["dev-reload"]

[features]
default = []
dev-reload = ["dep:ctrlc", "dep:notify"]

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ctrlc = { version = "3.4", features = ["termination"], optional = true }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
flate2 = "1.0"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
libc = "0.2"
notify = { version = "6.1", optional = true }
portable-pty = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.23"
tf-rust-socketio = { version = "0.8.1", features = ["async"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.21"
toml_edit = "0.22"
url = "2"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_ProcessStatus", "Win32_System_SystemInformation", "Win32_System_Threading"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
