[project]
name = "executor-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.5",
    "apscheduler==3.10.4",
    "cryptography>=42.0.4",
    "fastapi==0.121.2",
    "jinja2>=3.1.6",
    "kubernetes==29.0.0",
    "pydantic==2.11.2",
    "pyjwt==2.8.0",
    "httpx>=0.27.0",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "requests-oauthlib==2.0.0",
    "starlette>=0.49.1",
    "uvicorn==0.38.0",
]
