[project]
name = "executor-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.5",
    "apscheduler==3.10.4",
    "cryptography>=42.0.4",
    "fastapi==0.121.2",
    "httpcore>=1.0.9",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "kubernetes==29.0.0",
    "pydantic==2.11.2",
    "pyjwt==2.8.0",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "requests-oauthlib==2.0.0",
    "starlette>=0.49.1",
    "uvicorn==0.38.0",
    "websocket-client>=1.9.0",

    # OpenTelemetry core packages
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",

    # OpenTelemetry instrumentation packages
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-requests>=0.48b0",
    "opentelemetry-instrumentation-system-metrics>=0.48b0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-httpx>=0.36.0",
]
