# SPDX-FileCopyrightText: 2026 Weibo, Inc.
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "wegent-knowledge-engine"
version = "1.0.0"
description = "Wegent Knowledge Engine Execution Kernel"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "pydantic>=2.5.3",
    "sqlalchemy>=2.0.25",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "llama-index-core>=0.12.0",
    "llama-index-vector-stores-elasticsearch>=0.4.0",
    "llama-index-vector-stores-qdrant>=0.9.0",
    "llama-index-vector-stores-milvus>=0.4.0",
    "pymilvus>=2.4.0,<2.6.4",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-readers-file>=0.4.0",
    "docx2txt>=0.8",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.2",
    "chardet>=5.0.0",
    "pillow>=12.0.0",
    "python-magic>=0.4.27",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "emoji>=2.9.0",
    "httpx[brotli,socks]>=0.26.0",
    "orjson>=3.9.0",
    "langchain-text-splitters>=0.3.0",
    "wegent-shared",
]

[tool.uv.sources]
wegent-shared = { path = "../shared", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "venv"]
skip_gitignore = true
known_first_party = ["knowledge_engine", "shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knowledge_engine"]
