[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wegent"
version = "1.1.0"
description = "Wegent command line tool - kubectl-style CLI for managing Wegent resources"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "WeCode-AI Team", email = "team@wecode.ai"}
]
keywords = ["wegent", "cli", "kubectl", "agent", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "PyYAML>=5.4.0",
]

[project.urls]
Homepage = "https://github.com/wecode-ai/wegent"
Repository = "https://github.com/wecode-ai/wegent"

[project.scripts]
wegent = "wegent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wegent*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
wegent = ["py.typed"]
