[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
release-devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
libc = "0.2"
ctrlc = { version = "3.4", features = ["termination"] }
tauri = { version = "2.11.2", features = ["protocol-asset", "tray-icon", "unstable"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
portable-pty = "0.8"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSPasteboard"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSDistributedNotificationCenter", "NSNotification", "NSObject", "NSString", "std"] }
